[gd_scene load_steps=4 format=3 uid="uid://dljc634vpa233"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_2sjr2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_idub6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vt1dy"]
height = 1.4

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2sjr2")
camera_sensitivity = 0.3

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_idub6")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CapsuleShape3D_vt1dy")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="CrosshairRayCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -5)

[node name="CrouchingRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
